summary done some proof reading

--- a/Sections/closing/closing.tex
+++ b/Sections/closing/closing.tex
@@ -1,6 +1,8 @@
 \newpage
 \section{TLA\,+ \& Closing Remarks}
+\label{sec:tla}
 
+\noindent
 TLA\,+ is a high-level specification language based on temporal logic that lets you model distributed algorithms, exhaustively explore all possible states, 
 and prove safety and liveness properties.  While it excels at uncovering subtle bugs and proving correctness, TLA\,+ specifications do not translate directly 
 into production code---implementing a verified design remains a substantial engineering effort. 
