--- a/Sections/consist/consist.tex
+++ b/Sections/consist/consist.tex
@@ -1,7 +1,9 @@
 \newpage 
 \section{Consistency Models}
 \subsection{Introduction}
+\label{sec:consist}
 
+\noindent
 Moving on from consensus models, which handle agreement on data values,
 we now shift our focus to the ordering of operations and their validity:
 
