--- a/Sections/crash/crash.tex
+++ b/Sections/crash/crash.tex
@@ -1,5 +1,7 @@
 \newpage 
 \section{Failure Models}
+
+\label{sec:failures}
 \subsection{Defining Failures}
 This section discusses, what to do or how to classify when failures occur.
 
