--- a/Sections/dyn/dyn.tex
+++ b/Sections/dyn/dyn.tex
@@ -1,7 +1,9 @@
 \newpage
 
 \section{Dynamo: Amazon's Highly Available Key-Value Store}
+\label{sec:dynamo}
 
+\noindent
 It's 2007 and Amazon's global e-commerce platform must remain ``always-on'' despite continual component failures, outages cost 
 revenue and customer trust. To achieve this, Dynamo sacrifices strict consistency for low-latency availability (\href{https://www.amazon.science/publications/dynamo-amazons-highly-available-key-value-store#:~:text=This%20paper%20presents%20the%20design%20and%20implementation%20of,availability%2C%20Dynamo%20sacrifices%20consistency%20under%20certain%20failure%20scenarios.}{Original Paper}):
 
