--- a/Sections/gfs/gfs.tex
+++ b/Sections/gfs/gfs.tex
@@ -1,6 +1,8 @@
 \newpage 
 \section{Google File System (GFS)}
+\label{sec:gfs}
 
+\noindent
 Its 2003 and a research paper by Sanjay Ghemawat, Howard Gobioff, and Shun-Tak Leung, lay out
 what would become the Google File System (GFS). In the early 2000s,
 Google rapidly expanded its workload, scaling to support services like,
