--- a/Sections/high/high.tex
+++ b/Sections/high/high.tex
@@ -1,5 +1,6 @@
 \section{High-level Computer Architecture Overview}
 
+\label{sec:high}
 \subsection{System Review}
 To understand distributed systems, we must first review 
 the architecture of a single computer.
