--- a/Sections/mapreduce/mapreduce.tex
+++ b/Sections/mapreduce/mapreduce.tex
@@ -1,5 +1,6 @@
 \newpage
 \section{MapReduce}
+\label{sec:mapreduce}
 
 \noindent
 It's 2004 and Google is looking for a way to process large amounts of web-crawled data efficiently in parallel.
