--- a/Sections/raft/raft.tex
+++ b/Sections/raft/raft.tex
@@ -1,4 +1,7 @@
 \section{Raft Protocol: Consensus Replication}
+
+\label{sec:raft}
+\noindent
 As we've discussed so far, replication consistency is crucial and a 
 difficult task. The next strategy, \textbf{Raft}, deals with such problem.
 There are other solutions, however, Raft is considered safe and easier to 
