--- a/Sections/shared/shared.tex
+++ b/Sections/shared/shared.tex
@@ -1,5 +1,9 @@
 \newpage
 \section{Distributed Shared Memory}
+\label{sec:shared}
+
+
+\noindent
 To speed up computation on a single machine, we use multiple cores to 
 run OS threads in parallel. Consider the following example:
 
