--- a/Sections/span/span.tex
+++ b/Sections/span/span.tex
@@ -1,5 +1,8 @@
 \newpage
 \section{Spanner: A Globally-Distributed Database}
+\label{sec:spanner}
+
+\noindent
 In 2012, Corbett et al. introduced Spanner, Google's scalable, multi-version, globally-distributed, and synchronously-replicated database.
 The first system to support world-wide atomic transactions with its novel TrueTime API (\href{https://static.googleusercontent.com/media/research.google.com/en//archive/spanner-osdi2012.pdf}{Original Paper}):
 
