--- a/Sections/time/time.tex
+++ b/Sections/time/time.tex
@@ -69,6 +69,7 @@ In practice we to achieve semi-synchronized clocks, we developed the following p
 \newpage 
 \subsection{Logical Clocks: Lamport \& Vector Clocks}
 
+\label{sec:logical_clocks}
 \noindent
 To get away from the limitations of physical clocks, we may use logical clocks to order events.
 
