--- a/Sections/trans/trans.tex
+++ b/Sections/trans/trans.tex
@@ -2,6 +2,7 @@
 
 \section{Transactions and Concurrency Control}
 \subsection{Optimistic Concurrency Control (OCC)}
+\label{sec:occ}
 
 \noindent
 Say the backbone of our stock trading application is a 
