--- a/Sections/shared/shared.tex
+++ b/Sections/shared/shared.tex
@@ -44,7 +44,7 @@ We have to decide now on a system of communication:
 
 \noindent
 To solve this problem, we reuse a hardware primitive in the previous Section (\ref{sec:virt}).
-\begin{theo}[Multithread Comminucation -- Virtual Memory]
+\begin{theo}[Multithread Communication -- Virtual Memory]
 
     A multithread process can still communicate between threads by utilizing the same virtual memory space, we call this \textbf{shared memory}.
 \end{theo}
